derive/tests/compile-fail/must_be_pub.stderr
error: #[packet] structs must be public
  --> $DIR/must_be_pub.rs:12:8
   |
12 | struct MustBePub {
   |        ^^^^^^^^^
